--- a/web/index.html
+++ b/web/index.html
@@ -36,6 +36,14 @@
         .upload-zone p {
             color: var(--text-light) !important;
         }
+
+        /* 🔧 FIX #2: Hebreo y Chino clickeables */
+        .language-option {
+            pointer-events: auto !important;
+            cursor: pointer !important;
+            z-index: 100 !important;
+            position: relative !important;
+        }
     </style>
 </head>
 <body>
@@ -602,7 +610,7 @@
     </footer>
 
     <!-- JavaScript Files - Order matters! -->
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/telecom-data.js"></script>
+    <script src="js/telecom-data.js"></script>
     <script src="js/language-manager.js"></script>
     <script src="js/chart-renderer.js"></script>
     <script src="js/api-connector.js"></script>
@@ -615,4 +623,12 @@
     <!-- Service Worker Registration -->
     <script>
         if ('serviceWorker' in navigator) {
-            window.addEventListener
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/sw.js')
+                    .then(registration => console.log('✅ SW registered'))
+                    .catch(error => console.log('❌ SW registration failed:', error));
+            });
+        }
+    </script>
+</body>
+</html>
